As周りのリソース生成処理、作りかけ。
git-svn-id: https://www.seasar.org/svn/chura/trunk@416 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -120,6 +120,7 @@
 			<entry kind="file" path="${mainResourcePath}/dao.dicon"/>
 		</handler>
 		<handler type="classpath">
+			<entry kind="file" path="${libPath}/geronimo-j2ee_1.4_spec-1.0.jar"/>
 			<entry kind="file" path="${libPath}/s2-dao-1.0.40.jar" />
 		</handler>
 	</project>
