--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -193,4 +193,32 @@
 		<description language="en"><![CDATA[
 		]]></description>
 	</project>
+	<project id="50" name="Flex2 + S2Dao" jre="1.4" root="template/50" extends="11" order="C02">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="default">
+			<entry kind="file" path=".tomcatplugin"/>
+			<entry kind="file" path="${testLibPath}/swc/s2flex2-components.swc" />
+			<entry kind="file" path="${mainResourcePath}/amf3.dicon"/>
+			<entry kind="file" path="${mainResourcePath}/remoting_amf3.dicon"/>
+			<entry kind="file" path="${webAppRoot}/WEB-INF/web.xml"/>
+		</handler>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/s2-flex2-1.0.0.jar" />
+			<entry kind="file" path="${testLibPath}/geronimo-jsp_2.0_spec-1.0.jar" />
+			<entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
+		</handler>
+		<handler type="tomcat"/>
+	</project>
+	<project id="550" name="S2Flex2 + S2Dao" jre="1.5" root="template/550" extends="50,511" order="TC03">
+		<description language="ja"><![CDATA[
+		]]></description>
+		<description language="en"><![CDATA[
+		]]></description>
+		<handler type="classpath">
+			<entry kind="file" path="${libPath}/s2-flex2-tiger-1.0.0.jar"/>
+		</handler>
+	</project>
 </projects>
