--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -193,32 +193,110 @@
 		<description language="en"><![CDATA[
 		]]></description>
 	</project>
-	<project id="50" name="Flex2 + S2Dao" jre="1.4" root="template/50" extends="11" order="C02">
+	<project id="5000" name="Flex2Base" 
+		root="template/resources,template/licenses,template/resources/data">
+		<handler type="default">
+			<entry kind="file" path="WEB-INF/src/licenses/LICENSE.txt"/>
+			<entry kind="file" path="WEB-INF/src/licenses/LICENSE.h2.html"/>
+			<entry kind="file" path="WEB-INF/src/licenses/LICENSE.javassist.html"/>
+			<entry kind="file" path="WEB-INF/src/licenses/LICENSE.junit.html"/>
+			<entry kind="file" path="WEB-INF/src/licenses/LICENSE.ognl.txt"/>
+			<entry kind="file" path="WEB-INF/src/licenses/NOTICE.txt"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/dao"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/dto"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/dxo"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/entity"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/helper"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/converter"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/interceptor"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/logic"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/service"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/validator"/>
+			<entry path="WEB-INF/src/main/java/${packagePath}/web"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/app.dicon"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/convention.dicon"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/creator.dicon"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/customizer.dicon"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/env.txt"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/jdbc.dicon"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/log4j.properties"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/s2container.dicon"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/dao"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/dto"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/dxo"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/entity"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/helper"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/interceptor"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/logic"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/service"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/validator"/>
+			<entry path="WEB-INF/src/test/java/${packagePath}/web"/>
+			<entry path="WEB-INF/src/test/resources"/>
+		</handler>
+		<handler type="classpath">
+			<entry kind="output" path="WEB-INF/classes"/>
+			<entry path="WEB-INF/src/main/java"/>
+			<entry path="WEB-INF/src/main/resources"/>
+			<entry path="WEB-INF/src/test/java"/>
+			<entry path="WEB-INF/src/test/resources"/>
+			<entry kind="con" path="${jreContainer}" />
+			<entry kind="file" path="WEB-INF/lib/junit-3.8.2.jar" />
+			<entry kind="file" path="WEB-INF/lib/junit-addons-1.4.jar" />
+			<entry kind="file" path="WEB-INF/lib/aopalliance-1.0.jar" />
+			<entry kind="file" path="WEB-INF/lib/commons-logging-1.0.4.jar" />
+			<entry kind="file" path="WEB-INF/lib/javassist-3.4.ga.jar" />
+			<entry kind="file" path="WEB-INF/lib/log4j-1.2.13.jar" />
+			<entry kind="file" path="WEB-INF/lib/ognl-2.6.7.jar" />
+			<entry kind="file" path="WEB-INF/lib/poi-2.5.1-final-20040804.jar" />
+			<entry kind="file" path="WEB-INF/lib/h2-2006-11-03.jar" />
+			<entry kind="file" path="WEB-INF/lib/s2-extension-2.4.8.jar" />
+			<entry kind="file" path="WEB-INF/lib/s2-framework-2.4.8.jar" />
+			<entry kind="file" path="WEB-INF/lib/geronimo-jta_1.0.1B_spec-1.0.jar" />
+		</handler>
+		<handler type="jdt">
+			<entry kind="file" path=".settings/jdt.pref"/>
+		</handler>
+		<handler type="dolteng">
+			<entry kind="file" path=".settings/dolteng.pref"/>
+		</handler>
+		<handler type="diigu"/>
+		<handler type="dblauncher">
+			<entry kind="file" path=".settings/dblauncher.pref"/>
+		</handler>
+		<handler type="h2">
+			<entry kind="file" path="WEB-INF/src/main/resources/data/demo.sql"/>
+		</handler>
+	</project>
+	<project id="50" name="Flex2 + S2Dao" jre="1.4" root="template/50" extends="5000" order="C02">
 		<description language="ja"><![CDATA[
 		]]></description>
 		<description language="en"><![CDATA[
 		]]></description>
 		<handler type="default">
 			<entry kind="file" path=".tomcatplugin"/>
-			<entry kind="file" path="${testLibPath}/swc/s2flex2-components.swc" />
-			<entry kind="file" path="${mainResourcePath}/amf3.dicon"/>
-			<entry kind="file" path="${mainResourcePath}/remoting_amf3.dicon"/>
-			<entry kind="file" path="${webAppRoot}/WEB-INF/web.xml"/>
+			<entry kind="file" path="WEB-INF/lib/swc/s2flex2-components.swc" />
+			<entry kind="file" path="WEB-INF/src/main/resources/amf3.dicon"/>
+			<entry kind="file" path="WEB-INF/src/main/resources/remoting_amf3.dicon"/>
+			<entry kind="file" path="WEB-INF/web.xml"/>
 		</handler>
 		<handler type="classpath">
-			<entry kind="file" path="${libPath}/s2-flex2-1.0.0.jar" />
-			<entry kind="file" path="${testLibPath}/geronimo-jsp_2.0_spec-1.0.jar" />
-			<entry kind="file" path="${testLibPath}/geronimo-servlet_2.4_spec-1.0.jar" />
+			<entry kind="file" path="WEB-INF/lib/s2-flex2-1.0.0.jar" />
+			<entry kind="file" path="WEB-INF/lib/s2-dao-1.0.40.jar" />
+			<entry kind="file" path="WEB-INF/lib/geronimo-jsp_2.0_spec-1.0.jar" />
+			<entry kind="file" path="WEB-INF/lib/geronimo-servlet_2.4_spec-1.0.jar" />
 		</handler>
 		<handler type="tomcat"/>
 	</project>
-	<project id="550" name="S2Flex2 + S2Dao" jre="1.5" root="template/550" extends="50,511" order="TC03">
+	<project id="550" name="S2Flex2 + S2Dao" jre="1.5" root="template/550" extends="50" order="TC03">
 		<description language="ja"><![CDATA[
 		]]></description>
 		<description language="en"><![CDATA[
 		]]></description>
 		<handler type="classpath">
-			<entry kind="file" path="${libPath}/s2-flex2-tiger-1.0.0.jar"/>
+			<entry kind="file" path="WEB-INF/lib/s2-tiger-2.4.8.jar"/>
+			<entry kind="file" path="WEB-INF/lib/s2-dao-tiger-1.0.40.jar"/>
+			<entry kind="file" path="WEB-INF/lib/geronimo-ejb_2.1_spec-1.0.jar"/>
+			<entry kind="file" path="WEB-INF/lib/s2-flex2-tiger-1.0.0.jar"/>
 		</handler>
 	</project>
 </projects>
