git-svn-id: https://www.seasar.org/svn/chura/trunk@451 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -279,7 +279,7 @@
 			<entry kind="file" path="WEB-INF/web.xml"/>
 		</handler>
 		<handler type="classpath">
-			<entry kind="file" path="WEB-INF/lib/s2-flex2-1.0.0.jar" />
+			<entry kind="file" path="WEB-INF/lib/s2-flex2-1.0.1-SNAPSHOT.jar" />
 			<entry kind="file" path="WEB-INF/lib/s2-dao-1.0.40.jar" />
 			<entry kind="file" path="WEB-INF/lib/geronimo-jsp_2.0_spec-1.0.jar" />
 			<entry kind="file" path="WEB-INF/lib/geronimo-servlet_2.4_spec-1.0.jar" />
