git-svn-id: https://www.seasar.org/svn/chura/trunk@473 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/template/projects.xml
@@ -89,6 +89,7 @@
 			<entry kind="file" path="${mainResourcePath}/app_aop.dicon"/>
 			<entry kind="file" path="${mainResourcePath}/teedaErrorPage.dicon"/>
 			<entry kind="file" path="${mainResourcePath}/teedaCustomize.dicon"/>
+			<entry kind="file" path="${webAppRoot}/index.jsp"/>
 			<entry kind="file" path="${webAppRoot}/view/error/error.html"/>
 			<entry kind="file" path="${webAppRoot}/WEB-INF/faces-config.xml"/>
 			<entry kind="file" path="${webAppRoot}/WEB-INF/web.xml"/>
