繰り返しまでできたのでコミット。
git-svn-id: https://www.seasar.org/svn/chura/trunk@834 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/chura-tutorial/src/main/webapp/view/selectmanylistbox/selectManyListbox.html
+++ b/chura-tutorial/src/main/webapp/view/selectmanylistbox/selectManyListbox.html
@@ -1,13 +1,13 @@
-<html xmlns:te="http://www.seasar.org/teeda/extension">
+<html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>SelectOneMenu</title>
+<title>SelectManyListbox</title>
 </head>
 <body>
-<span id="allMessages"/>
 <form id="form">
+<span id="allMessages"/>
 <input type="hidden" id="aaaItemsSave"/>
-<select id="aaa">
+<select id="aaa" multiple="multiple">
     <option value="0">A</option>
 </select><br />
 <input type="submit" value="submit" id="doSubmit"/>
