3章分が完成。
git-svn-id: https://www.seasar.org/svn/chura/trunk@875 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/chura-tutorial/src/main/webapp/view/foreach/foreach.html
+++ b/chura-tutorial/src/main/webapp/view/foreach/foreach.html
@@ -6,7 +6,7 @@
 <body>
 <table border="1">
     <tbody id="aaaItems">
-        <tr style="background-color:yellow">
+        <tr id="aaaRow" style="background-color:yellow">
             <td><span id="id">1</span></td>
             <td><span id="name">name1</span></td>
             <td><a id="goForeachResult"
