4章の途中だけどコミット。
git-svn-id: https://www.seasar.org/svn/chura/trunk@908 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/chura-tutorial/src/main/webapp/view/emp/empEdit.html
+++ b/chura-tutorial/src/main/webapp/view/emp/empEdit.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <form id="EmpEditForm"><input type="hidden" id="crudType" />
+<input type="hidden" id="deptIdItemsSave" />
 <div>
 <span id="messages"></span>
 </div>
@@ -48,7 +49,7 @@
 </tr>
 <tr>
     <td><label id="deptIdLabel">deptId</label></td>
-	<td><input type="text" id="deptId"/></td>
+	<td><select id="deptId"></select></td>
 	<td><span id="deptIdMessage"></span></td>
 </tr>
 <tr>
